using fuse dependencies for HL7, ThirdParty and EDI

--- a/iDaaS-Connect-BlueButton/pom.xml
+++ b/iDaaS-Connect-BlueButton/pom.xml
@@ -106,7 +106,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
+                <groupId>org.jboss.redhat-fuse</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
