--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -24,7 +24,7 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.camel.springboot</groupId>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-spring-boot-starter</artifactId>
     </dependency>
     <dependency>
@@ -58,11 +58,6 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-kafka</artifactId>
-    </dependency>
-    <!-- Bean -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-bean</artifactId>
     </dependency>
     <!-- HL7 HAPI Specific Camel Support Libraries-->
     <dependency>
@@ -120,22 +115,6 @@
       <groupId>ca.uhn.hapi.fhir</groupId>
       <artifactId>hapi-fhir-base</artifactId>
     </dependency>
-    <!--https://stackoverflow.com/questions/48722138/how-to-monitor-apache-camel-routes-in-a-java-project-using-hawtio-->
-    <!-- UI -->
-    <dependency>
-      <groupId>io.hawt</groupId>
-      <artifactId>hawtio-springboot</artifactId>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.jolokia/jolokia-jvm -->
-    <dependency>
-      <groupId>org.jolokia</groupId>
-      <artifactId>jolokia-jvm</artifactId>
-    </dependency>
-    <!-- This dependency is mandatory for enabling Camel management via JMX / Hawtio. -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-management</artifactId>
-    </dependency>
     <!-- iDaaS Event Builder Repo or Local-->
     <dependency>
       <groupId>io.connectedhealth-idaas</groupId>
@@ -166,7 +145,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
+        <groupId>org.jboss.redhat-fuse</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <executable>true</executable>
