--- a/iDaaS-Connect-SAP/pom.xml
+++ b/iDaaS-Connect-SAP/pom.xml
@@ -113,7 +113,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
+        <groupId>org.jboss.redhat-fuse</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
