--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ server.port=9983
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
-idaas.kafka.brokers=idaas-kafka-kafka-bootstrap:9092
+idaas.kafka.brokers=localhost:9092
 idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
 idaas.iot.integration.topic=iot
@@ -23,15 +23,19 @@ idaas.iot.integration.topic=iot
 idaas.cloud.topic=idaas_cloud
 idaas.process.public-cloud=false
 idaas.cloud.api=urlendpoint
-
+# JDBC Database
+spring.datasource.url=jdbc:postgresql://localhost/:5432/idaas_thirdparty
+spring.datasource.username=postgres
+spring.datasource.password=Developer123
+spring.database.driver-class-name=org.postgresql.Driver
 # Reporting Directory and File Name
-mandatory.reporting.directory=/tmp/data_input/thirdparty/MandatoryReporting
+mandatory.reporting.directory=/data_input/thirdparty/MandatoryReporting
 mandatory.reporting.file=ReportingExample.csv
 # Covid Directory and File Ext
-covid.reporting.directory=/tmp/data_input/thirdparty/CovidData
+covid.reporting.directory=/data_input/thirdparty/CovidData
 covid.reporting.extension=*.csv
 # Reseach Data Directory and File Ext
-research.data.directory=/tmp/data_input/thirdparty/ResearchData
+research.data.directory=/data_input/thirdparty/ResearchData
 research.reporting.extension=*.csv
 # General Settings
 idaas.public_cloud=false
