--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 # Admin Interface Settings
-management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
-hawtio.authenticationEnabled=false
-management.endpoint.hawtio.enabled=true
-management.endpoint.jolokia.enabled=true
-# urls
-# http://localhost:9983/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
-# http://localhost:9983/actuator/hawtio/index.html
-# Used for internal HTTP server managing application
-# Must be unique and defined otherwise defaults to 8080
-# used for any Fuse SpringBoot developed assets
-# Port Used
-management.port=9983
-server.port=9983
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoint.prometheus.enabled=true
+
 # Management App Server Address
 server.address=0.0.0.0
+server.port=8080
 management.address=0.0.0.0
-idaas.kafka.brokers=idaas-kafka-kafka-bootstrap:9092
+management.port=8081
+
+idaas.kafka.brokers=idaas-kafka-bootstrap:9092
 idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
 idaas.iot.integration.topic=iot
+
+sftp.server.username=
+sftp.server.password=
+sftp.server.host=
+sftp.server.port=
+sftp.server.dir=
+
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
 idaas.process.public-cloud=false
