--- a/iDaaS-Connect-EDI/pom.xml
+++ b/iDaaS-Connect-EDI/pom.xml
@@ -84,6 +84,13 @@
             <plugin>
                 <groupId>org.jboss.redhat-fuse</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+        				<executions>
+        					<execution>
+        						<goals>
+        							<goal>repackage</goal>
+        						</goals>
+        					</execution>
+        				</executions>
             </plugin>
         </plugins>
     </build>
