--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -1,41 +1,46 @@
 # Admin Interface Settings
-management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
-hawtio.authenticationEnabled=false
-management.endpoint.hawtio.enabled=true
-management.endpoint.jolokia.enabled=true
-# urls
-# http://localhost:9983/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
-# http://localhost:9983/actuator/hawtio/index.html
-# Used for internal HTTP server managing application
-# Must be unique and defined otherwise defaults to 8080
-# used for any Fuse SpringBoot developed assets
-# Port Used
-management.port=9983
-server.port=9983
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoint.prometheus.enabled=true
+
 # Management App Server Address
 server.address=0.0.0.0
+server.port=8080
 management.address=0.0.0.0
+management.port=8081
+
 idaas.kafka.brokers=localhost:9092
 idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
 idaas.iot.integration.topic=iot
+
+sftp.server.username=
+sftp.server.password=
+sftp.server.host=
+sftp.server.port=
+sftp.server.dir=
+
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
 idaas.process.public-cloud=false
 idaas.cloud.api=urlendpoint
+
 # JDBC Database
 spring.datasource.url=jdbc:postgresql://localhost/:5432/idaas_thirdparty
 spring.datasource.username=postgres
 spring.datasource.password=Developer123
 spring.database.driver-class-name=org.postgresql.Driver
+
 # Reporting Directory and File Name
 mandatory.reporting.directory=/data_input/thirdparty/MandatoryReporting
 mandatory.reporting.file=ReportingExample.csv
+
 # Covid Directory and File Ext
 covid.reporting.directory=/data_input/thirdparty/CovidData
 covid.reporting.extension=*.csv
+
 # Reseach Data Directory and File Ext
 research.data.directory=/data_input/thirdparty/ResearchData
 research.reporting.extension=*.csv
+
 # General Settings
 idaas.public_cloud=false
