--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -17,7 +17,8 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+idaas.edi278.topic.name=278
+idaas.kafka.Brokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
 idaas.processTerminologies=true
