third party: moving messages after consumption

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -13,11 +13,12 @@ idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
 idaas.iot.integration.topic=iot
 
-sftp.server.username=
-sftp.server.password=
-sftp.server.host=
-sftp.server.port=
-sftp.server.dir=
+sftp.username=
+sftp.password=
+sftp.host=
+sftp.port=22
+sftp.dir=upload/RH_IDaasS
+sftp.dir.processed=.processed
 
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
@@ -38,7 +39,7 @@ mandatory.reporting.file=ReportingExample.csv
 covid.reporting.directory=/data_input/thirdparty/CovidData
 covid.reporting.extension=*.csv
 
-# Reseach Data Directory and File Ext
+# Research Data Directory and File Ext
 research.data.directory=/data_input/thirdparty/ResearchData
 research.reporting.extension=*.csv
 
