--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -13,11 +13,12 @@ idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
 idaas.iot.integration.topic=iot
 
-sftp.server.username=
-sftp.server.password=
-sftp.server.host=
-sftp.server.port=
-sftp.server.dir=
+sftp.username=
+sftp.password=
+sftp.host=
+sftp.port=22
+sftp.dir=upload/RH_IDaasS
+sftp.dir.processed=.processed
 
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
