placing the same configuration for HL7

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -1,79 +1,16 @@
 # Admin Interface Settings
 management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
-hawtio.authenticationEnabled=false
-management.endpoint.hawtio.enabled=true
-management.endpoint.jolokia.enabled=true
-# urls
-# http://localhost:9980/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
-# http://localhost:9980/actuator/hawtio/index.html
-# Used for internal HTTP server managing application
-# Must be unique and defined otherwise defaults to 8080
-# used for any Fuse SpringBoot developed assets
-management.port=9980
-server.port=9980
-server.max-http-header-size=200000
+management.endpoint.prometheus.enabled=true
+
 # Management App Server Address
 server.address=0.0.0.0
-management.address=0.0.0.0
-# Kafka Configuration - use comma if multiple kafka servers are needed
-idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
-idaas.fhirConversionTopic=idaas_ccdafhirconversion
-# Public Cloud
-idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=true
-idaas.cloudAPI=urlendpoint
-# HL7 Specific properties
-# ADT
-idaas.hl7.adt.dir=/data-input/hl7/adt
-idaas.adtPort=10001
-idaas.adtACKResponse=true
-idaas.adtTopicName=mctn_mms_adt
-# ORM
-idaas.hl7.orm.dir=data-input/hl7/orm
-idaas.ormPort=10002
-idaas.ormACKResponse=true
-# ORU
-idaas.ormTopicName=mctn_mms_orm
-idaas.hl7.oru.dir=data-input/hl7/oru
-idaas.oruPort=10003
-idaas.oruACKResponse=true
-idaas.oruTopicName=mctn_mms_oru
-# RDE
-idaas.hl7.rde.dir=data-input/hl7/rde
-idaas.rdePort=10004
-idaas.rdeACKResponse=true
-idaas.rdeTopicName=mctn_mms_rde
-# MFN
-idaas.hl7.mfn.dir=data-input/hl7/mfn
-idaas.mfnPort=10005
-idaas.mfnACKResponse=true
-idaas.mfnTopicName=mctn_mms_mfn
-# MDM
-idaas.hl7.mdm.dir=data-input/hl7/mdm
-idaas.mdmPort=10006
-idaas.mdmACKResponse=true
-idaas.mdmTopicName=mctn_mms_mdm
-# SCH
-idaas.hl7.sch.dir=data-input/hl7/sch
-idaas.schPort=10007
-idaas.schACKResponse=true
-idaas.schTopicName=mctn_mms_sch
-# VXU
-idaas.hl7.vxu.dir=data-input/hl7/vxu
-idaas.vxuPort=10008
-idaas.vxuACKResponse=true
-idaas.vxuTopicName=mctn_mms_vxu
-# CCDA
-idaas.hl7.ccda.dir=data-input/ccda
-idaas.ccdaTopicName=mctn_mms_ccda
+server.port=8080
+server.max-http-header-size=200000
 
-# HL7 over HTTP
-idaas.hl7HTTPTopicName=mctn_mms_hl7http
-# Other Settings
-idaas.convertCCDAtoFHIR=true
-idaas.convertHL7toFHIR=true
-idaas.processTerminologies=true
-idaas.deidentify=false
-idaas.anonymize=false
+management.address=0.0.0.0
+management.port=8081
+
+aws.access.key=
+aws.secret.key=
+aws.region=US_EAST_1
+aws.bucket=public-idaas
