fixing error handling and adding filter

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ sftp.host=
 sftp.port=22
 sftp.dir=upload/RH_IDaasS
 sftp.dir.processed=.processed
+sftp.dir.error=.error
 
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
