removing application.properties

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -8,6 +8,7 @@ server.port=8080
 management.address=0.0.0.0
 management.port=8081
 
+#idaas.kafka.brokers=idaas-kafka-bootstrap:9092
 idaas.kafka.brokers=localhost:9092
 idaas.integration.topic=opsmgmt_platformtransactions
 idaas.app.integration.topic=opsmgmt_platformappintgrtn
