--- a/iDaaS-Connect-CMS-Interoperability/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-CMS-Interoperability/src/main/resources/application-dev.properties
@@ -19,7 +19,12 @@ management.address=0.0.0.0
 # Kafka
 # Inbound Topics
 idaas.xds.topic.name=xdsb_inbd
-
+idaas.pixaddupdate.topic.name=pixaddupdate_inbd
+idaas.providerreqdocs.topic.name=providerreqdocs_inbd
+idaas.priorauth.topic.name=priorauth_inbd
+idaas.deqm.topic.name=deqm_inbd
+idaas.pdex.topic.name=pdex_inbd
+idaas.epdx.topic.name=epdx_inbd
 idaas.kafka.Brokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
