third-party: adding a second route for DQAAS

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application-dev.properties
@@ -18,9 +18,15 @@ sftp.username=
 sftp.password=
 sftp.host=
 sftp.port=22
-sftp.dir=upload/RH_IDaasS
+sftp.hl7.dir=upload/RH_IDaasS
+sftp.dqaas.dir=
+sftp.ct.dir=
 sftp.dir.processed=.processed
 sftp.dir.error=.error
+
+
+
+
 
 # Public Cloud
 idaas.cloud.topic=idaas_cloud
