build now adds externalized application.properties

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ buildNumber.properties
 .mvn/timing.properties
 id_file
 application.properties
+secret.yaml
 
 ### NetBeans ###
 nbproject/private/
