--- a/iDaaS-Connect-HL7/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application-dev.properties
@@ -4,11 +4,34 @@ management.endpoint.prometheus.enabled=true
 
 # Management App Server Address
 server.address=0.0.0.0
+management.port=8081
 server.port=8080
 server.max-http-header-size=200000
 
+# Kafka Details
+idaas.kafka.brokers=localhost:9092
+idaas.ccdapost.topic.name=ccda
+idaas.ccdaconversion.topic.name=ccdaconverted
+idaas.hl7conversion.topic.name=hl7converted
+idaas.hl7post.topic.name=hl7converted
+idaas.publiccloud.topic.name=cloud
+idaas.terminology.topic.name=terminologies
+idaas.hl7.adt.topic.name=adt
+
+# HL7 Ports
+idaas.port.adt=10001
+
+# Processes
+idaas.process.PublicCloud=true
+idaas.process.Terminologies=true
+# Other Settings
+idaas.convert.CCDAtoFHIR=true
+idaas.convert.HL7toFHIR=true
+
+idaas.deidentify=false
+idaas.anonymize=false
 management.address=0.0.0.0
-management.port=8081
+
 
 aws.access.key=
 aws.secret.key=
