--- a/iDaaS-Connect-HL7/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application-dev.properties
@@ -1,14 +1,13 @@
 # Admin Interface Settings
 management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
 management.endpoint.prometheus.enabled=true
-
 # Management App Server Address
 server.address=0.0.0.0
 management.port=8081
+management.address=0.0.0.0
 server.port=8080
 server.max-http-header-size=200000
-
-# Kafka Details
+# Kafka Details and Topics
 idaas.kafka.brokers=localhost:9092
 idaas.ccdapost.topic.name=ccda
 idaas.ccdaconversion.topic.name=ccdaconverted
@@ -16,23 +15,26 @@ idaas.hl7conversion.topic.name=hl7converted
 idaas.hl7post.topic.name=hl7converted
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
-idaas.hl7.adt.topic.name=adt
-
+idaas.deidentification.topic.name=deidentification
+idaas.processacks.topic.name=hl7acks
+idaas.hl7adt.topic.name=adt
 # HL7 Ports
 idaas.port.adt=10001
-
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
-# Other Settings
+idaas.process.Sdoh=true
+idaas.process.Deidentification=false
+idaas.process.Empi=false
+idaas.process.Acks=true
+#idaas.convert.anonymize=false
+# Conversions
 idaas.convert.CCDAtoFHIR=true
 idaas.convert.HL7toFHIR=true
-
-idaas.deidentify=false
-idaas.anonymize=false
-management.address=0.0.0.0
-
-
+# External APIs
+idaas.api.deidentification=http://localhost:8001/api/deidentification
+idaas.api.empi=http://localhost:8001/api/empi
+# Other Settings
 aws.access.key=
 aws.secret.key=
 aws.region=US_EAST_1
